RESOLVED FIXED212596
[JSC] BigInt operations should handle exception correctly
https://bugs.webkit.org/show_bug.cgi?id=212596
Summary [JSC] BigInt operations should handle exception correctly
Yusuke Suzuki
Reported 2020-06-01 08:48:44 PDT
[JSC] BigInt operations should handle exception correctly
Attachments
Patch (3.72 KB, patch)
2020-06-01 08:49 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-06-01 08:49:47 PDT
Radar WebKit Bug Importer
Comment 2 2020-06-01 08:50:09 PDT
Mark Lam
Comment 3 2020-06-01 09:01:59 PDT
Comment on attachment 400736 [details] Patch r=me
EWS
Comment 4 2020-06-01 11:21:51 PDT
Committed r262386: <https://trac.webkit.org/changeset/262386> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400736 [details].
Note You need to log in before you can comment on or make changes to this bug.