[JSC] BigInt operations should handle exception correctly https://bugs.webkit.org/show_bug.cgi?id=212596

Reviewed by Mark Lam.

Some places miss exception check / explicit scope-release while BigInt operations can now throw an exception.
This patch adds them. They are covered by existing stress tests with Debug build.

* runtime/Operations.h:
(JSC::compareBigIntToOtherPrimitive):
(JSC::compareBigInt32ToOtherPrimitive):
(JSC::jsInc):
(JSC::jsDec):
(JSC::jsBitwiseNot):


Canonical link: https://commits.webkit.org/225433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262386 268f45cc-cd09-0410-ab3c-d52691b4dbfc